--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.69.5",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "0.31.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
